fix: reduce padding gap

--- a/projects/movies/src/app/app-shell/app-shell.component.scss
+++ b/projects/movies/src/app/app-shell/app-shell.component.scss
@@ -15,6 +15,7 @@
   .menu {
     background: var(--palette-background-default);
     width: 300px;
+    top: 95%;
   }
 }
 
